# Magic-Square_20

./: .cursorrules  .gitignore  README.md  constants.py  pyproject.toml
Report/: 02. MagicSquare_Cursorrules_작업_보고서.md  03. MagicSquare_사용자여정_및_구현시나리오_L1-L5.md  04. MagicSquare_4x4_PRD_DualTrack_MLOps_작업_보고서.md  05. MagicSquare_README_및_구현준비_작업_보고서.md  06. MagicSquare_README_ToDo_에픽추적보드_작업_보고서.md  07. MagicSquare_RED_DualTrack_TDD_작업_보고서.md  08. MagicSquare_Boundary_GREEN_및_Git_작업_보고서.md  09. MagicSquare_GREEN_Entity_GUI_패키징_작업_보고서.md  10. MagicSquare_테스트커버리지_GUI_통합_작업_보고서.md  11. MagicSquare_REFACTOR_사전진단_및_계획_보고서.md  4x4_마방진_문제정의_및_배경_보고서.md
boundary/: __init__.py  magic_square.py
docs/: PRD_MagicSquare_4x4.md  RED_TestCase_Spec_MagicSquare_4x4_DualTrack.md
entity/: __init__.py  magic_square_ops.py
magicsquare/: __init__.py  __main__.py
magicsquare/screen/: __init__.py  app.py  coverage_gui.py  test_runner.py
prompt/: 02.cursor_yaml_file_structure_for_magicsqu.prompt.md  03.cursor_magic_square_user_journey_epic.prompt.md  04.cursor_prd_content_for_magic_square_4x4.md  05.cursor_to_do_list_creation_references.md  06. cursor_readme_to_do_list_from_requireme.md  07. cursor_magic_square_test_case_specifica.md  08. cursor_magic_square_ui_test_implementat.md  09. cursor_magic_square_4x4_tdd_guidelines.md  10. cursor_magic_square_coverage.md  11. cursor_refactoring_branch_workflow.md
tests/boundary/: test_magic_square_ui_red.py
tests/entity/: test_magic_square_logic_red.py
