[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-square-20"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
gui = ["PyQt6>=6.6.0"]

[tool.setuptools]
packages = ["boundary", "entity", "magicsquare", "magicsquare.screen"]
py-modules = ["constants"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
